name:                cagenix
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/cagenix#readme
license:             BSD3
license-file:        LICENSE
author:              Corey Winkelmann
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable cagenix
        build-depends    : base
                         , wai-routes
                         , warp
                         , text
        main-is          : Main.hs
        buildable        : True
        default-language : Haskell2010
        ghc-options      : -Wall
        hs-source-dirs   : src
